apps/breathe/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: breathe
  namespace: breathe
spec:
  type: ClusterIP
  selector:
    app: breathe
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
